Updates from ShareLaTeX

--- a/bundler-sigcomm19.tex
+++ b/bundler-sigcomm19.tex
@@ -12,6 +12,7 @@
 %\setlength{\abovedisplayskip}{0pt}
 %\setlength{\belowdisplayskip}{-5pt}
 
+\newcommand{\name}{\an{Bundler\xspace}}
 \begin{document}
 \title{Paper Title Here}
 
@@ -19,6 +20,9 @@
 \include{abstract}
 \maketitle
 \input{intro}
+\input{design}
+\input{impl}
+\input{eval}
 
 \bibliographystyle{abbrv}
 \bibliography{ref}
