--- a/ref.bib
+++ b/ref.bib
@@ -1299,8 +1299,15 @@ author = {{Chelsio Communications}},
   year={2011},
 }
 
+@inproceedings{ccp,
+   author =       "Akshay Narayan and Frank Cangialosi and Deepti Raghavan and Prateesh Goyal and  Srinivas Narayana and Radhika Mittal and Mohammad Alizadeh and Hari Balakrishnan",
+   title =        "{Restructing Endpoint Congestion Control}",
+   booktitle =    {SIGCOMM},
+   year =         {2018},
+}
+
 @inproceedings{ccp-hotnets,
-   author =       "Akshay Narayan and Frank J. Cangialosi and Prateesh Goyal and  Srinivas Narayana and Mohammad Alizadeh and Hari Balakrishnan",
+   author =       "Akshay Narayan and Frank Cangialosi and Prateesh Goyal and  Srinivas Narayana and Mohammad Alizadeh and Hari Balakrishnan",
    title =        "{The Case for Moving Congestion Control Out of the Datapath}",
    booktitle =    {HotNets},
    year =         {2017},
