--- a/bundler-sigcomm19.tex
+++ b/bundler-sigcomm19.tex
@@ -13,6 +13,8 @@
 %\setlength{\belowdisplayskip}{-5pt}
 
 \newcommand{\name}{\an{Bundler\xspace}}
+\newcommand{\inbox}{\an{In-box\xspace}}
+\newcommand{\outbox}{\an{Out-box\xspace}}
 \begin{document}
 \title{Paper Title Here}
 
