--- a/ref.bib
+++ b/ref.bib
@@ -19,6 +19,13 @@
     year={2013},
 }
 
+@inproceedings{mos,
+    author = "Muhammad Asim Jamshed and YoungGyoun Moon and Donghwi Kim and Dongsu Han and KyoungSoo Park",
+    title = {{mOS: A Reusable Networking Stack for Flow Monitoring Middleboxes}},
+    booktitle = {NSDI},
+    year = 2017,
+}
+
 @inproceedings{Jacobson88,
     author = "Jacobson, V.",
     title = {{Congestion Avoidance and Control}},
@@ -1292,11 +1299,32 @@ author = {{Chelsio Communications}},
   year={2012},
 }
 
+@inproceedings{aplomb,
+  title="{{Making Middleboxes Someone Else’s Problem: Network Processing As a Cloud Service}}",
+  author="Sherry, Justine and Hasan, Shadi and Scott, Colin and Krishnamurthy, Arvind and Ratnasamy, Sylvia and Sekar, Vyas",
+  booktitle={SIGCOMM},
+  year={2012},
+}
+
 @inproceedings{mptcp,
   title="{Design, Implementation and Evaluation of Congestion Control for Multipath TCP}",
   author="Wischik, Damon and Raiciu, Costin and Greenhalgh, Adam and Handley, Mark",
   booktitle={NSDI},
   year={2011},
+}
+
+@inproceedings{path-properties,
+   author =       "Allman, Mark and Paxson, Vern",
+   title =        "{On Estimating End-to-End Network Path Properties}",
+   booktitle =    {SIGCOMM},
+   year =         {1999},
+}
+
+@inproceedings{packet-dynamics,
+   author =       "Paxson, Vern",
+   title =        "{End-to-End Internet Packet Dynamics}",
+   booktitle =    {SIGCOMM},
+   year =         {1997},
 }
 
 @inproceedings{ccp,
