--- a/bundler-sigcomm19.tex
+++ b/bundler-sigcomm19.tex
@@ -16,7 +16,7 @@
 \newcommand{\inbox}{\an{In-box\xspace}}
 \newcommand{\outbox}{\an{Out-box\xspace}}
 \begin{document}
-\title{Paper Title Here}
+\title{Taking Control of Your Own Traffic \an{better title}}
 
 \begin{sloppypar}
 \include{abstract}
