--- a/design.tex
+++ b/design.tex
@@ -1,6 +1,19 @@
 \section{Design Overview}\label{s:design}
 \begin{figure*}
     \centering
+    \begin{subfigure}[b]{0.45\textwidth}
+        \includegraphics[width=\textwidth]{img/shift-bottleneck-before}
+        \caption{Shift-bottleneck before}\label{fig:design:shift-bottleneck:before}
+    \end{subfigure}
+    \begin{subfigure}[b]{0.45\textwidth}
+        \includegraphics[width=\textwidth]{img/shift-bottleneck-after}
+        \caption{Shift-bottleneck after}\label{fig:design:shift-bottleneck:after}
+    \end{subfigure}
+    \caption{Shift-bottleneck}\label{fig:design:shift-bottleneck}
+\end{figure*}
+
+\begin{figure*}
+    \centering
     \includegraphics[width=2\columnwidth]{img/bundler-diagram}
     \caption{Bundler System Design}\label{fig:bundler}
 \end{figure*}
