--- a/ref.bib
+++ b/ref.bib
@@ -159,6 +159,12 @@
     howpublished = {\url{https://www.ietf.org/proceedings/97/slides/slides-97-iccrg-bbr-congestion-control-02.pdf}},
 }
 
+@misc{nanog-discussion,
+    title = {{RED Analysis for Congested Network Core and Customer Egress}},
+    author = {Bradley Reynolds},
+    howpublished = {\url{https://www.nanog.org/meetings/abstract?id=1264}},
+}
+
 @inproceedings{xcp,
     title = {{Congestion Control for High Bandwidth-Delay Product Networks}},
     author = "Dina Katabi and Mark Handley and Chalrie Rohrs",
